--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+button {
+  background-color: red;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+}
